backend to frontend connection

--- a/FRONTEND/.env
+++ b/FRONTEND/.env
@@ -1,3 +1,4 @@
 # VITE_BACKEND_URL=https://ai-tutor-o13c.onrender.com/
 VITE_APP_GEMINI_API_KEY=AIzaSyCYV2uxFheCh12cY5Ifxtyls4lJckKXQ2Q
-VITE_BACKEND_URL=http://localhost:5000/
+# VITE_BACKEND_URL=http://localhost:5000/
+VITE_BACKEND_URL=https://ai-coach-et55.onrender.com/
