--- a/FRONTEND/.env
+++ b/FRONTEND/.env
@@ -2,3 +2,4 @@
 VITE_APP_GEMINI_API_KEY=AIzaSyCYV2uxFheCh12cY5Ifxtyls4lJckKXQ2Q
 # VITE_BACKEND_URL=http://localhost:5000/
 VITE_BACKEND_URL=https://ai-coach-et55.onrender.com/
+VITE_GOOGLE_API_KEY=AIzaSyDhruu7C9KiOAAnhTzaUZstr_byFVElrUQ
