--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@google/genai": "^1.21.0",
     "@google/generative-ai": "^0.24.1",
     "@mui/material": "^7.2.0",
     "@tailwindcss/vite": "^4.1.11",
