--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -13,26 +13,18 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@google/genai": "^1.10.0",
+    "@google/genai": "^1.20.0",
     "@google/generative-ai": "^0.24.1",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
-    "child_process": "^1.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "express-fileupload": "^1.5.2",
-    "express-openid-connect": "^2.18.1",
-    "express-validator": "^7.2.1",
-    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4",
+    "mongoose": "^8.18.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
-    "sanitize-html": "^2.17.0",
-    "util": "^0.12.5"
+    "stream": "^0.0.3"
   }
 }
